--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -1,19 +1,19 @@
-@use "../base/colors";
-@use "../base/typography";
+@use "../base/colors" as *;
+@use "../base/typography" as *;
 
-.container {
+.navbar-container {
   display: flex;
   flex-direction: column;
   height: 100vh;
   height: 100dvh;
   align-items: flex-start;
   width: fit-content;
-  background-color: colors.$background-light-secondary;
+  background-color: $background-light-secondary;
 }
 
 .logo-wrapper {
-  background-color: colors.$color-primary;
-  padding: 1rem 2rem;
+  background-color: $color-primary;
+  padding: 0.5rem 3rem;
 }
 
 .item {
@@ -25,32 +25,32 @@
   align-items: center;
   position: relative;
   &:hover {
-    background-color: darken(colors.$background-light-secondary, 3%);
+    background-color: darken($background-light-secondary, 3%);
   }
   &.active {
-    background-color: darken(colors.$background-light-secondary, 5%);
+    background-color: darken($background-light-secondary, 5%);
     &::before {
       content: "";
       position: absolute;
       height: 100%;
       width: 2px;
-      background-color: colors.$color-primary;
+      background-color: $color-primary;
       left: 0;
     }
   }
 }
 
 .item-text {
-  font-size: typography.$font-size-400;
-  color: colors.$text-light-subtle;
+  font-size: $font-size-400;
+  color: $text-light-subtle;
 }
 
-.item-wrapper {
+.items-wrapper {
   padding-top: 1rem;
   display: flex;
   flex-direction: column;
   width: 100%;
-  gap: 0.75rem;
+  gap: 0.5rem;
 }
 
 .footer {
@@ -59,16 +59,16 @@
   margin-top: auto;
   padding: 1rem 2rem;
   gap: 1rem;
-  background-color: colors.$color-primary;
+  background-color: $color-primary;
   width: 100%;
   align-items: center;
   transition: background-color 200ms ease-in-out;
   &:hover {
-    background-color: darken(colors.$color-primary, 5%);
+    background-color: darken($color-primary, 5%);
   }
 }
 
 .support-text {
-  font-size: typography.$font-size-400;
-  color: colors.$color-primary-contrast;
+  font-size: $font-size-400;
+  color: $color-primary-contrast;
 }
