--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -1,3 +1,5 @@
+@use "../styles/base/colors" as *;
+
 $font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
   "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
   "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
@@ -13,6 +15,16 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   font-family: $font-mono;
+}
+
+body {
+  @include spread-map($theme-map-light);
+  &.light {
+    @include spread-map($theme-map-light);
+  }
+  &.dark {
+    @include spread-map($theme-map-dark);
+  }
 }
 
 a {
