--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -3,7 +3,7 @@
 .header-container {
   display: flex;
   flex-direction: row;
-  background-color: $background-light-secondary;
+  background-color: var(--background-secondary);
   width: 100%;
   height: fit-content;
   align-items: center;
@@ -30,14 +30,14 @@
   align-items: center;
   transition: background-color 200ms ease-in-out;
   &:hover {
-    background-color: darken($background-light-secondary, 3%);
+    background-color: var(--background-secondary-shade-3);
   }
   &.active {
     &::before {
       content: "";
       width: 7px;
       height: 7px;
-      background-color: $color-danger;
+      background-color: var(--color-danger);
       position: absolute;
       right: 9px;
       top: 7px;
