--- a/src/styles/components/_section_title.scss
+++ b/src/styles/components/_section_title.scss
@@ -3,7 +3,7 @@
 
 .section-title-text {
   font-size: $font-size-400;
-  color: $text-light-bold;
+  color: var(--text-bold);
   font-weight: 600;
   position: relative;
   padding-left: 0.5rem;
@@ -12,7 +12,7 @@
     position: absolute;
     width: 3px;
     height: 100%;
-    background-color: $color-primary;
+    background-color: var(--color-primary);
     left: 0;
   }
 }
