Adição da busca na API por usuários e paginação da tabela

--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -30,10 +30,10 @@ $theme-map-dark: (
   $--color-danger: #ff4d4f,
   $--color-unselected: #dfefec,
   $--color-primary-contrast: #ffffff,
-  $--background-primary: #222222,
-  $--background-secondary: #000000,
-  $--background-secondary-shade-3: lighten(#000000, 3%),
-  $--background-secondary-shade-5: lighten(#000000, 5%),
+  $--background-primary: #2e3440,
+  $--background-secondary: #222222,
+  $--background-secondary-shade-3: lighten(#222222, 3%),
+  $--background-secondary-shade-5: lighten(#222222, 5%),
   $--text-bold: #eceff4,
   $--text-subtle: #d8dee9,
 );
