--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -7,7 +7,7 @@
   outline: inherit;
 
   background: var(--color-primary);
-  color: var(--color-primary) !important;
+  color: var(--color-primary-contrast) !important;
   padding: 0.4rem 1.2rem;
   border-radius: 0.2rem;
   font-weight: 500;
@@ -16,5 +16,17 @@
   &.disabled {
     background: var(--color-unselected);
     color: var(--color-primary) !important;
+    cursor: not-allowed !important;
   }
+}
+
+.search-button {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+  display: flex;
 }
