--- a/src/styles/layouts/_dashboard.scss
+++ b/src/styles/layouts/_dashboard.scss
@@ -8,6 +8,8 @@
 
 .content-wrapper {
   flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .page-main {
@@ -15,6 +17,10 @@
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
+  flex: 1;
+  max-height: calc(100vh - 79.7px);
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .cards-wrapper {
