--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -30,3 +30,29 @@
   outline: inherit;
   display: flex;
 }
+
+.mobile-menu-button {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+  display: flex;
+
+  justify-content: center;
+  align-items: center;
+  transition: background-color 200ms ease-in-out;
+  cursor: pointer;
+  border-radius: 100px;
+  width: 2.7rem;
+  height: 2.7rem;
+
+  &:hover {
+    background-color: var(--background-secondary-shade-3);
+  }
+  &.active {
+    background-color: var(--background-secondary-shade-3);
+  }
+}
