--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,5 +1,3 @@
-@use "../base/colors" as *;
-
 .header-container {
   display: flex;
   flex-direction: row;
@@ -17,6 +15,9 @@
   display: flex;
   flex: 1;
   margin-right: 10%;
+  &.mobile {
+    margin-right: 0px;
+  }
 }
 
 .notification-icon-wrapper {
