--- a/src/styles/layouts/_configuracoes.scss
+++ b/src/styles/layouts/_configuracoes.scss
@@ -4,10 +4,14 @@
   display: flex;
   flex-direction: row;
   background-color: var(--background-primary);
+  height: 100dvh;
+  height: 100vh;
 }
 
 .content-wrapper {
   flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .page-main {
@@ -15,6 +19,7 @@
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
+  flex: 1;
 }
 
 .theme-switcher-wrapper {
