--- a/src/styles/components/_header_mobile.scss
+++ b/src/styles/components/_header_mobile.scss
@@ -24,15 +24,6 @@
   gap: 1rem;
 }
 
-.ant-dropdown-arrow {
-  &::before {
-    background-color: var(--background-secondary) !important;
-  }
-}
-.ant-dropdown-menu {
-  background-color: var(--background-secondary) !important;
-}
-
 .mobile-support-link {
   display: flex;
   flex-direction: row;
@@ -47,4 +38,8 @@
   &:hover {
     background-color: var(--color-primary-shade-5);
   }
+}
+
+.searchbar-mobile {
+  margin-right: 0px;
 }
