--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -1,4 +1,3 @@
-@use "../base/colors" as *;
 @use "../base/typography" as *;
 
 .pagination-button {
@@ -54,5 +53,42 @@
   }
   &.active {
     background-color: var(--background-secondary-shade-3);
+  }
+}
+
+.delete-button {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+  display: flex;
+
+  padding: 0.5rem 0.8rem;
+  background-color: var(--color-danger);
+}
+
+.delete-selcted-button {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+  display: flex;
+
+  align-items: center;
+  font-size: 14px;
+  color: var(--text-bold);
+  transition: background-color 200ms ease-in-out;
+
+  &:hover {
+    text-decoration: underline;
+  }
+  &.active {
+    text-decoration: underline;
   }
 }
