--- a/src/styles/components/_icons.scss
+++ b/src/styles/components/_icons.scss
@@ -1,5 +1,3 @@
-@use "../base/colors" as *;
-
 .navbar-icon {
   color: var(--color-primary);
   font-size: 1rem;
@@ -31,4 +29,9 @@
 .mobile-menu-icon {
   font-size: 1.5rem;
   color: var(--text-bold);
+}
+
+.delete-icon {
+  font-size: 1rem;
+  color: var(--color-primary-contrast);
 }
