--- a/src/styles/components/_users_table.scss
+++ b/src/styles/components/_users_table.scss
@@ -1,4 +1,3 @@
-@use "../base/colors" as *;
 @use "../base/typography" as *;
 
 .table-perfil-picture-wrapper {
@@ -6,6 +5,14 @@
     margin-left: auto;
     margin-right: auto;
   }
+}
+
+.table-header-wrapper {
+  display: flex;
+  flex-direction: row;
+  padding-left: 0.5rem;
+  margin-bottom: 1rem;
+  gap: 2rem;
 }
 
 .ant-table {
